--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ section .title::after{
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: black;
+    color: #333;
     padding: 0 5px;
     background: #fff;
     transform: translateX(-50%);
@@ -87,7 +87,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: black;
+    background: rgb(29, 29, 85);
 }
 .navbar .max-width{
     display: flex;
@@ -100,7 +100,7 @@ section .title::after{
     font-weight: 600;
 }
 .navbar .logo a span{
-    color: black;
+    color: white;
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -119,7 +119,7 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: black;
+    color: goldenrod;
 }
 .navbar.sticky .menu li a:hover{
     color: #fff;
@@ -136,7 +136,7 @@ section .title::after{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: black;
+    background: #333;
     right: 30px;
     bottom: 10px;
     text-align: center;
@@ -164,7 +164,7 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background: url("images/banner.jpg") no-repeat center;
+    background: url("../img/galaxy-960.jpg") no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
@@ -188,29 +188,29 @@ section .title::after{
     margin: 5px 0;
 }
 .home .home-content .text-3 span{
-    color: black;
+    color: #333;
     font-weight: 500;
 }
 .home .home-content a{
     display: inline-block;
-    background: black;
+    background: #333;
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     font-weight: 400;
     border-radius: 6px;
-    border: 2px solid black;
+    border: 2px solid #333;
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color: black;
+    color: #333;
     background: none;
 }
 
 /* about section styling */
 .about .title::after{
-    content: "who i am";
+    content: "who I am";
 }
 .about .about-content .left{
     width: 45%;
@@ -230,25 +230,25 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: black;
+    color: #333;
 }
 .about .about-content .right p{
     text-align: justify;
 }
 .about .about-content .right a{
     display: inline-block;
-    background: black;
+    background: #333;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid black;
+    border: 2px solid #333;
     transition: all 0.3s ease;
 }
 .about .about-content .right a:hover{
-    color: black;
+    color: #333;
     background: none;
 }
 
@@ -276,7 +276,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .services .serv-content .card:hover{
-    background: black;
+    background: #333;
 }
 .services .serv-content .card .box{
     transition: all 0.3s ease;
@@ -286,7 +286,7 @@ section .title::after{
 }
 .services .serv-content .card i{
     font-size: 50px;
-    color: black;
+    color: #333;
     transition: color 0.3s ease;
 }
 .services .serv-content .card:hover i{
@@ -316,18 +316,18 @@ section .title::after{
 }
 .skills .skills-content .left a{
     display: inline-block;
-    background: black;
+    background: #333;
     color: #fff;
     font-size: 18px;
     font-weight: 500;
     padding: 8px 16px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid black;
+    border: 2px solid #333;
     transition: all 0.3s ease;
 }
 .skills .skills-content .left a:hover{
-    color: black;
+    color: #333;
     background: none;
 }
 .skills .skills-content .right .bars{
@@ -355,7 +355,7 @@ section .title::after{
     height: 100%;
     left: 0;
     top: 0;
-    background: black;
+    background: #333;
 }
 .skills-content .right .html::before{
     width: 80%;
@@ -386,7 +386,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover{
-    background: black;
+    background: #333;
 }
 .teams .carousel .card .box{
     display: flex;
@@ -408,7 +408,7 @@ section .title::after{
     width: 150px;
     object-fit: cover;
     border-radius: 50%;
-    border: 3px solid black;
+    border: 3px solid #333;
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover img{
@@ -424,7 +424,7 @@ section .title::after{
     margin: 0 5px;
     outline: none!important;
     border-radius: 50%;
-    border: 2px solid black!important;
+    border: 2px solid #333!important;
     transition: all 0.3s ease;
 }
 .owl-dot.active{
@@ -433,7 +433,7 @@ section .title::after{
 }
 .owl-dot.active,
 .owl-dot:hover{
-    background: black!important;
+    background: #333!important;
 }
 
 /* contact section styling */
@@ -464,7 +464,7 @@ section .title::after{
 }
 .contact .contact-content .row i{
     font-size: 25px;
-    color: black;
+    color: #333;
 }
 .contact .contact-content .info .head{
     font-weight: 500;
@@ -518,8 +518,8 @@ section .title::after{
 .contact .right form .button button{
     width: 100%;
     height: 100%;
-    border: 2px solid black;
-    background: black;
+    border: 2px solid #333;
+    background: #333;
     color: #fff;
     outline: none;
     font-size: 20px;
@@ -529,7 +529,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .contact .right form .button button:hover{
-    color: black;
+    color: #333;
     background: none;
 }
 
@@ -541,7 +541,7 @@ footer{
     text-align: center;
 }
 footer span {
-    color: black;
+    color: #333;
     text-decoration: none;
 }
 footer span a:hover{
