--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,7 @@ section .title::after{
     height: 100vh;
     color: #fff;
     min-height: 500px;
+    width: 100%;
     background-size: cover;
     background-attachment: fixed;
     font-family: 'Ubuntu', sans-serif;
